--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 
 <script src="./utils.js"></script>
 <script src="./home.js"></script>
+<script src="./varvslet.js"></script>
 
 </body>
 </html>
