--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 <script src="./utils.js"></script>
 <script src="./home.js"></script>
 <script src="./typesoperators.js"></script>
+<script src="./programflow.js"></script>
 
 </body>
 </html>
