--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
 
 <script src="./utils.js"></script>
 <script src="./home.js"></script>
-<script src="./typesoperators.js"></script>
-<script src="./programflow.js"></script>
+<script src="./objectsanddom.js"></script>
 
 </body>
 </html>
