--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
 <script src="./utils.js"></script>
 <script src="./home.js"></script>
 <script src="./objectsanddom.js"></script>
+<script src="./switch.js"></script>
+<script src="./breakcontinue.js"></script>
+<script src="./mathoperations.js"></script>
+<script src="./truthyfasly.js"></script>
+<script src="./shortcircuiting.js"></script>
 
 </body>
 </html>
