--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 <script src="./mathoperations.js"></script>
 <script src="./truthyfasly.js"></script>
 <script src="./shortcircuiting.js"></script>
+<script src="./spreadoperator.js"></script>
 
 </body>
 </html>
