--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 <script src="./truthyfasly.js"></script>
 <script src="./shortcircuiting.js"></script>
 <script src="./spreadoperator.js"></script>
+<script src="./objectliteral.js"></script>
 
 </body>
 </html>
