--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
 <script src="./shortcircuiting.js"></script>
 <script src="./spreadoperator.js"></script>
 <script src="./objectliteral.js"></script>
+<script src="./objectproperties.js"></script>
+<script src="./prototypeandinterfaces.js"></script>
 
 </body>
 </html>
