adding certification questions

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
 <script src="./objectliteral.js"></script>
 <script src="./objectproperties.js"></script>
 <script src="./prototypeandinterfaces.js"></script>
+<script src="./certificate-questions.js"></script>
 
 </body>
 </html>
