--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://www.pluralsight.com/content/dam/pluralsight2/teach/author-tools/carved-rock-fitness/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./exam.js"></script>
+    
 </head>
-<body>
+<body onload="changeColor();">
 <div class="crf">
     <!-- NAVIGATION -->
     <nav class="navbar navbar-expand flex-column flex-md-row header-nav--nav">
@@ -35,6 +37,26 @@
                             <li class="nav-item"><a class="nav-link" href="#">Bags &amp; Travel</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Trail Reviews</a></li>
                         </ul>
+                    </div>
+                    <div>
+                        <input type="button" value="click me!" name="mybutton" onclick="alert('Hello World!');"/>
+                        <!--<input type="text" value="Displays Alert" id="mytext" onmouseover="alert('This is a textbox')"/>-->
+                        <p id="mymessage" onclick="myToggle();">I am a paragraph click to change it.</p>
+                        <a href="https://www.google.com/" class="link" onclick="alert('You Should stay here');return false">Google Link</a>
+                        <input type="text" class="textbox" value="" id="myname" onchange="myLength();" />
+                        <p id="mysize">0</p>
+                        <input id="myfocustest" type="text" value="This is focus test" onmouseover="myColor();" onmouseout="myRestore();" >
+                        <div id="progressbar">
+                            <div id="progvalue">
+                                <div id="progpercent">61%
+                                </div>
+                            </div>
+                        </div>
+                        <input type="button" value="progress" class="button" onclick="myProgress();"/>
+                        <a href="javascript:void(0);" class="link" onclick="myOpenNew();">new window</a>
+                        <p><b>This text is bold</b></p>
+                        <p><b>Word</b></p>
+                        <p onload="getBold();"></p>
                     </div>
                     <div class="header-nav--utilities d-flex align-items-center justify-content-end flex-row-reverse flex-row flex-md-row">
                         <div class="account d-flex flex-column">
@@ -218,6 +240,6 @@
 <script src="./objectproperties.js"></script>
 <script src="./prototypeandinterfaces.js"></script>
 <script src="./certificate-questions.js"></script>
-
+<script type="text/javascript">myNumbers();</script>
 </body>
 </html>
